# crypto-etl-poc

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
dashboard/: __init__.py  app.py
docs/superpowers/plans/: 2026-07-06-layered-learning-mvp-implementation.md
docs/superpowers/specs/: 2026-07-06-layered-learning-mvp-design.md
src/crypto_etl/: __init__.py  config.py
src/crypto_etl/clients/: __init__.py  coingecko_client.py
src/crypto_etl/load/: __init__.py  raw_loader.py
src/crypto_etl/orchestration/: run_pipeline.py
src/crypto_etl/quality/: __init__.py  checks.py
src/crypto_etl/transform/: __init__.py  bronze_transform.py  gold_transform.py  silver_transform.py
src/crypto_etl/utils/: __init__.py  time.py
tests/: test_bronze_transform.py  test_coingecko_client.py  test_config.py  test_dashboard_data.py  test_gold_transform.py  test_pipeline_smoke.py  test_quality_checks.py  test_raw_loader.py  test_silver_transform.py  test_time.py
tests/fixtures/: coingecko_market_sample.json
